<resources>
    <string name="app_name">RSSI and Audio Data Collector</string>
    <string name="startButtonText">Start</string>
    <string name="stopButtonText">Stop</string>
    <string name="tModeSpinnerText">Transport Mode:</string>
    <string name="hertzSpinnerText">Hertz:</string>
    <string name="sampleRateSpinnerText">Sample Rate:</string>
    <string name="recurrencyText">Recurrency:</string>
    <string name="intervalText">Interval:</string>
    <string name="applyButtonText">Apply</string>
    <string name="RSSIText">RSSI Options</string>
    <string name="audioText">Audio Options</string>
</resources>
